dev_v0.1.0.0_setup_env

--- a/core/state_management/templates/base.html
+++ b/core/state_management/templates/base.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Sound Multi Analysis System - 狀態管理與監控中心">
+    <meta name="author" content="Sound Multi Analysis System">
+    <meta name="theme-color" content="#4f46e5">
     <title>{% block title %}State Management{% endblock %} - 狀態管理系統</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
